# rust-task1

./: Cargo.toml  README.md  config.yaml
src/: main.rs
