[package]
name = "solana_balances"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }